--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,7 +2,8 @@
   "pages": [
     "pages/index/index",
     "pages/square/square",
-    "pages/profile/profile"
+    "pages/profile/profile",
+    "pages/subjectList/subjectList"
   ],
   "window": {
     "backgroundColor": "#cdcdcd",
