feat: 个人中心完善及广场列表完善

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -3,7 +3,11 @@
     "pages/index/index",
     "pages/square/square",
     "pages/profile/profile",
-    "pages/subjectList/subjectList"
+    "pages/subjectList/subjectList",
+    "pages/myCollect/myCollect",
+    "pages/myIssue/myIssue",
+    "pages/myComment/myComment",
+    "pages/squareDetail/squareDetail"
   ],
   "window": {
     "backgroundColor": "#cdcdcd",
