feat: 联调每日一句与试题分类列表

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -7,7 +7,8 @@
     "pages/myCollect/myCollect",
     "pages/myIssue/myIssue",
     "pages/myComment/myComment",
-    "pages/squareDetail/squareDetail"
+    "pages/squareDetail/squareDetail",
+    "router/index.js"
   ],
   "window": {
     "backgroundColor": "#cdcdcd",
