feat: 联调广场列表、详情页、发布页以及我的收藏

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -8,7 +8,8 @@
     "pages/myIssue/myIssue",
     "pages/myComment/myComment",
     "pages/squareDetail/squareDetail",
-    "router/index.js"
+    "router/index.js",
+    "pages/publish/publish"
   ],
   "window": {
     "backgroundColor": "#cdcdcd",
