--- a/project.config.json
+++ b/project.config.json
@@ -64,6 +64,12 @@
         {
           "name": "pages/publish/publish",
           "pathName": "pages/publish/publish",
+          "query": "",
+          "scene": null
+        },
+        {
+          "name": "pages/profile/profile",
+          "pathName": "pages/profile/profile",
           "scene": null
         }
       ]
